# edaapp_ImageManager

./: CHANGES-imageimport.md  PROJECT  README.md  SECURITY.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  delete-ghcr-packages.yml  publish.yml
.mk/: 03-generate-targets.mk
apps/imagemanager.eda.edacommunity.com/: manifest.yaml
apps/imagemanager.eda.edacommunity.com/crds/: imagemanager.eda.edacommunity.com_imageimports.yaml  (+1 more)
docs/: CABLE-MAP-ARCHITECTURE.md  CABLE-MAP-UI-COMPARISON.md  IMAGEMANAGER_IMPROVEMENT_PROMPT.md  IMAGEMANAGER_PROJECT_SKILL.md  STABILITY.md
imagemanager/: manifest.yaml
imagemanager/api/v1alpha1/pysrc/: imageimport.py  (+2 more)
imagemanager/crds/: imagemanager.eda.edacommunity.com_imageimports.yaml  imagemanager.eda.edacommunity.com_imagemanagerartifacts.yaml  imagemanager.eda.edacommunity.com_imagemanagerconfigs.yaml
imagemanager/docs/: CHANGELOG.md  README.md  index.md
imagemanager/manifests/: app_deployment.yaml  daemonset.yaml  eda_viewer_role.yaml  httpproxy.yaml  pvc.yaml  rbac.yaml
imagemanager/openapiv3/: eda_column_printers_imagemanager.eda.edacommunity.com_imageimports.json  eda_column_printers_imagemanager.eda.edacommunity.com_imagemanagerartifacts.json  eda_column_printers_imagemanager.eda.edacommunity.com_imagemanagerconfigs.json  eda_oas_imagemanager.eda.edacommunity.com_imageimports.json  eda_oas_imagemanager.eda.edacommunity.com_imagemanagerartifacts.json  eda_oas_imagemanager.eda.edacommunity.com_imagemanagerconfigs.json
imagemanager/settings/: appsettings_types.go
imagemanager/ui/: imagemanager-dashboard.json
(+14 files in other folders)
