[project]
name = "imagemanager"
version = "0.1.32"
description = "EDA App Development Project"
readme = "README.md"
requires-python = "~=3.12"
dependencies = ["PyJWT>=2.3.0", "cryptography>=3.4.0"]

[dependency-groups]
dev = ["ruff>=0.9.3", "pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["imagemanager/build/controller/tests"]
pythonpath = ["imagemanager/build/controller"]
